--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,4 +76,5 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-contrib:2.2.2', {
         exclude group: 'com.android.support'
     })
+    compile 'com.android.support.test.espresso:espresso-idling-resource:2.2.2'
 }
