Created a Service to handle the Media Player to allow it to be used outside the app (supports continued listening whilst doing other activities, or whilst the screen is off. Includes some unit tests.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,10 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity" />
         </activity>
+        <service
+            android:name=".listenservice.ListenService"
+            android:description="@string/listen_service_description"
+            android:exported="false" />
     </application>
 
 </manifest>
