--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,12 +2,11 @@ apply plugin: 'com.android.application'
 
 //noinspection GroovyMissingReturnStatement
 android {
-    compileSdkVersion 26
-    buildToolsVersion "25.0.2"
+    compileSdkVersion 27
     defaultConfig {
         applicationId "com.hedgehogproductions.therapyguide"
         minSdkVersion 15
-        targetSdkVersion 26
+        targetSdkVersion 27
         versionCode 6
         versionName "1.5"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -25,12 +24,14 @@ android {
         }
     }
 
+    flavorDimensions "test"
     productFlavors {
         mock {
+            dimension "test"
             applicationIdSuffix = ".mock"
         }
         prod {
-
+            dimension "test"
         }
     }
 
@@ -54,32 +55,34 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
 
-    compile 'com.android.billingclient:billing:1.0'
-    compile 'com.android.support:appcompat-v7:26.1.0'
-    compile 'com.android.support:design:26.1.0'
-    compile 'com.android.support:cardview-v7:26.1.0'
-    compile 'com.android.support:recyclerview-v7:26.1.0'
-    compile 'com.google.guava:guava:20.0'
+    implementation 'com.android.billingclient:billing:1.0'
+    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'com.android.support:design:27.1.1'
+    implementation 'com.android.support:cardview-v7:27.1.1'
+    implementation 'com.android.support:recyclerview-v7:27.1.1'
+    implementation 'com.google.guava:guava:23.3-android'
+    implementation 'com.google.code.findbugs:jsr305:3.0.1'
 
-    testCompile 'junit:junit:4.12'
-    testCompile 'org.mockito:mockito-core:2.7.19'
+    testImplementation 'junit:junit:4.12'
+    testImplementation 'org.mockito:mockito-core:2.7.19'
 
     // Android Testing Support Library's runner and rules
-    androidTestCompile('com.android.support.test:runner:0.5', {
+    androidTestImplementation('com.android.support.test:runner:0.5', {
         exclude group: 'com.android.support'
     })
-    androidTestCompile('com.android.support.test:rules:0.5', {
+    androidTestImplementation('com.android.support.test:rules:0.5', {
         exclude group: 'com.android.support'
     })
 
+    androidTestImplementation 'com.google.code.findbugs:jsr305:3.0.1'
     // Espresso UI Testing dependencies.
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:3.0.2', {
         exclude group: 'com.android.support'
     })
-    androidTestCompile('com.android.support.test.espresso:espresso-contrib:2.2.2', {
+    androidTestImplementation('com.android.support.test.espresso:espresso-contrib:3.0.2', {
         exclude group: 'com.android.support'
     })
-    compile 'com.android.support.test.espresso:espresso-idling-resource:2.2.2'
+    implementation 'com.android.support.test.espresso:espresso-idling-resource:3.0.2'
 }
