--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,6 +64,7 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:27.1.1'
     implementation 'com.google.guava:guava:23.3-android'
     implementation 'com.google.code.findbugs:jsr305:3.0.1'
+    implementation 'com.android.support:support-annotations:27.1.1'
 
     testImplementation 'junit:junit:4.12'
     testImplementation 'org.mockito:mockito-core:2.7.19'
