Changing to one kindness per day.

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,20 @@
 /app/src/main/res/raw/
 /app/src/main/res/values/text.xml
 /.idea/caches/build_file_checksums.ser
+.DS_Store
+.idea/assetWizardSettings.xml
+.idea/caches/
+.idea/codeStyles/
+.idea/inspectionProfiles/
+.idea/shelf/
+app/.DS_Store
+app/app-prod-release.apk
+app/prod/
+app/sampledata/
+app/src/.DS_Store
+app/src/main/.DS_Store
+app/src/main/res/.DS_Store
+app/src/main/res/drawable-xxhdpi/tiffany.png
+app/src/main/res/drawable/.DS_Store
+app/src/main/res/mipmap-mdpi/.DS_Store
+captures/
